// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge should render 1`] = `
<div>
  <span
    class="Badge__Wrapper-w9wbbm-0 godhYe flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <span />
  </span>
</div>
`;

exports[`Badge should render with icon 1`] = `
<div>
  <span
    class="Badge__Wrapper-w9wbbm-0 godhYe flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ eZRpTZ"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom' 1`] = `
<div>
  <span
    class="Badge__Wrapper-w9wbbm-0 jRrmTY flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ eZRpTZ"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom-left' 1`] = `
<div>
  <span
    class="Badge__Wrapper-w9wbbm-0 kENhfw flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ eZRpTZ"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'bottom-right' 1`] = `
<div>
  <span
    class="Badge__Wrapper-w9wbbm-0 godhYe flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ eZRpTZ"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'left' 1`] = `
<div>
  <span
    class="Badge__Wrapper-w9wbbm-0 doSBog flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ eZRpTZ"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'right' 1`] = `
<div>
  <span
    class="Badge__Wrapper-w9wbbm-0 dLJmy flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ eZRpTZ"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top' 1`] = `
<div>
  <span
    class="Badge__Wrapper-w9wbbm-0 hkJSpt flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ eZRpTZ"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top-left' 1`] = `
<div>
  <span
    class="Badge__Wrapper-w9wbbm-0 bEbcWd flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ eZRpTZ"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with position 'top-right' 1`] = `
<div>
  <span
    class="Badge__Wrapper-w9wbbm-0 hGxEVj flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ eZRpTZ"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with size 'lg' 1`] = `
<div>
  <span
    class="Badge__Wrapper-w9wbbm-0 hebbam flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ eZRpTZ"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;

exports[`Badge should render with size 'md' 1`] = `
<div>
  <span
    class="Badge__Wrapper-w9wbbm-0 godhYe flex border-2 rounded-full justify-center items-center align-middle bg-theme-background border-transparent undefined"
  >
    <div
      class="sc-bdfBwQ eZRpTZ"
      height="10"
      width="10"
    />
    <span />
  </span>
</div>
`;
